feat: replace enrollment email with welcome email

--- a/mail/templates/welcome_course_run_enrollment/body.html
+++ b/mail/templates/welcome_course_run_enrollment/body.html
@@ -68,7 +68,11 @@
             expect to gain access to the course materials and platform on the
             scheduled start date. You will not be able to access any of the
             course content before the start date and time. To log in and start
-            your course, visit your MIT xPRO account dashboard.
+            your course, visit your
+            <a href="{{ base_url }}{% url 'user-dashboard' %}"
+              >{{ site_name }}
+              account dashboard</a
+            >.
           </p>
           <p style="margin: 0 0 10px">
             <strong><u>In-Course Support:</u></strong
