--- a/static/scss/variables.scss
+++ b/static/scss/variables.scss
@@ -35,3 +35,4 @@ $close-hover-background: #f9f2f3;
 $hs-form-field-border: #ced4da;
 $hs-form-field-label: #495057;
 $warning-background: #ef5350;
+$success-background: #66bb6a;
