--- a/mail/templates/external_data_sync/body.html
+++ b/mail/templates/external_data_sync/body.html
@@ -107,7 +107,8 @@
                 {% for run in stats.course_runs_skipped %}
                 <li>
                   {{ run.0 }}
-                  ({{ run.1 }})
+                  ({{ run.1 }}) -
+                  {{ run.2 }}
                 </li>
                 {% endfor %}
               </ul>
